Changed LinkedList to ArrayList for speed increase and added tape sum